[tool.poetry]
name = "monteexchange"
version = "0.1.14"
description = ""
authors = ["Dmitrii.Mashkov <dmitrii.mashkov@libertexgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
environs = "^11.0.0"
aiohttp = "^3.9.5"
certifi = "^2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
