[tool.poetry]
name = "monteexchange"
version = "0.1.20"
description = ""
authors = ["Dmitrii.Mashkov <dmitrii.mashkov@libertexgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.5.0"
environs = "^11.0.0"
aiohttp = "^3.9.5"
certifi = "^2024.2.2"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
black = "^24.4.2"
isort = "^5.13.2"
pre-commit = "^3.7.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
