[project]
name = "monteexchange"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "certifi>=2025.4.26",
    "environs>=14.1.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
]
